# skypro

./: .flake8  .gitignore  README.md  congif.py  pyproject.toml
data/: operations.json
htmlcov/: index.html
src/: csv_pandas.py  decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  re_collection.py  utils.py  widget.py
tests/: test_csv_pandas.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_re_collection.py  test_utils.py  test_widget.py
